새로고침 변경

--- a/volleyball/index.html
+++ b/volleyball/index.html
@@ -6,12 +6,12 @@
   <title>배구 점수판</title>
   <script>
     window.__VB_GATE_CONFIG__ = {
-      configPath: "../firebase.config.js",
+      configPath: "../firebase.config.js?v=20260216-1",
       redirectOnLock: true,
       redirectTo: "../index.html"
     };
   </script>
-  <script src="../gate.js"></script>
+  <script src="../gate.js?v=20260216-1"></script>
   <style>
     :root{
       --bg1:#eef5ff;
@@ -646,7 +646,7 @@ body { min-height: 100vh; }
 
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
-  <script src="../firebase.config.js"></script>
+  <script src="../firebase.config.js?v=20260216-1"></script>
   <script>
     const KEY = "vb_scoreboard_full_v1";
     const SCORE_DOC_ID = "scoreboard";
